# SFTPWrangler

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  postCreateCommand.sh  pyproject.toml
.cursor/rules/: agent-bootstrap.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: push_branch.yaml
examples/: README.md
examples/basic/: main.tf  version.tf
modules/all/: api_gateway.tf  app_config.tf  backup.tf  cloudwatch.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  locals.tf  main.tf  outputs.tf  provider.tf  s3.tf  secretsmanager.tf  transfer_family.tf  variables.tf  vpc.tf
src/: clients.py
src/admin_tasks/: app.py
src/api/: api_facade.py  app.py
src/entities/: context_under_test.py
src/on_incoming/: app.py
src/on_upload/: app.py
src/pull/: app.py
src/rotate_secrets/: app.py  rotator.py
src/utils/: cloudwatch.py  common.py  config.py  crypt.py  file_transformer.py  logs.py  metrics.py  path_security.py  s3.py  secrets.py  sftp.py
tests/: conftest.py
tests/admin_tasks/: test_api_arch_backfill.py  test_api_wise_backfill.py  test_categorization_backfill.py  test_incoming_backfill.py
tests/api/: test_api_handler.py  test_api_handler_arch_integration.py  test_api_handler_wise_integration.py  test_api_webhook_handler.py  test_arch_api_facade.py  test_wise_api_facade.py
tests/on_incoming/: test_on_incoming_handler.py  test_on_incoming_handler_error_metric.py  (+1 more)
threat-modeling/: THREAT_MODEL.md  python_dependencies.md  vs_code_extensions_and_features.md
(+53 files in other folders)
